[package]
name = "power-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.11", features = ["macros"] }
pretty_env_logger = "0.4"
tokio = { version = "1", features = [ "rt-multi-thread", "macros"] }
chrono = "0.4"
futures = "0.3"
redis = "0.22"
anyhow = "1.0"
async-trait = "0.1"